--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/id_container">
+
 
     <ImageView
         android:layout_width="100dp"
@@ -21,7 +23,6 @@
         android:layout_height="wrap_content"
         android:hint="Username"
         android:layout_gravity="center"
-        android:maxLines="1"
         android:layout_marginTop="100dp"/>
 
 
@@ -32,6 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="Password"
+        android:inputType="textPassword"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"/>
 
