--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -21,7 +21,7 @@
     </ImageView>
 
     <TextView
-        android:id="@+id/nume"
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Danaila Larisa"
@@ -31,15 +31,16 @@
         />
 
     <TextView
+        android:id="@+id/organization"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/nume"
+        android:layout_below="@+id/name"
         android:layout_toRightOf="@+id/img"
         android:text="Student"
         />
 
     <TextView
-        android:id="@+id/bio"
+        android:id="@+id/description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Bio"
@@ -48,143 +49,174 @@
         />
 
     <TextView
-        android:id="@+id/description"
+        android:id="@+id/bio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/bio_desc"
-        android:layout_below="@id/bio"
+        android:layout_below="@id/description"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="10dp"
         />
     <TextView
-        android:id="@+id/location"
+        android:id="@+id/location_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Location"
-        android:layout_below="@id/description"
+        android:layout_below="@id/bio"
         android:layout_marginTop="10dp"
         />
 
     <TextView
-        android:id="@+id/bucuresti"
+        android:id="@+id/location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/bucuresti"
 
-        android:textColor="#42a9fb"
-        android:layout_alignBaseline="@+id/location"
-        android:layout_alignBottom="@+id/location"
+        android:textColor="@color/colorBlue"
+        android:layout_alignBaseline="@+id/location_name"
+        android:layout_alignBottom="@+id/location_name"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"/>
+
+    <TextView
+        android:id="@+id/email_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Email"
+        android:layout_below="@id/location_name"
+        android:layout_marginTop="10dp"
+      />
 
     <TextView
         android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Email"
-        android:layout_below="@id/location"
-        android:layout_marginTop="10dp"
-      />
-
-    <TextView
-        android:id="@+id/andreea"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="@string/andreea"
-        android:textColor="#42a9fb"
-        android:layout_alignBaseline="@+id/email"
-        android:layout_alignBottom="@+id/email"
+        android:textColor="@color/colorBlue"
+        android:layout_alignBaseline="@+id/email_name"
+        android:layout_alignBottom="@+id/email_name"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"/>
 
+
+    <TextView
+        android:id="@+id/created_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Created"
+        android:layout_below="@id/email_name"
+        android:layout_marginTop="10dp"
+       />
 
     <TextView
         android:id="@+id/created"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Created"
-        android:layout_below="@id/email"
-        android:layout_marginTop="10dp"
-       />
-
-    <TextView
-        android:id="@+id/date1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="@string/date1"
-        android:textColor="#42a9fb"
-        android:layout_alignBaseline="@+id/created"
-        android:layout_alignBottom="@+id/created"
+        android:textColor="@color/colorBlue"
+        android:layout_alignBaseline="@+id/created_name"
+        android:layout_alignBottom="@+id/created_name"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"/>
 
+
+    <TextView
+        android:id="@+id/updated_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Updated"
+        android:layout_below="@id/created_name"
+        android:layout_marginTop="10dp"
+      />
 
     <TextView
         android:id="@+id/updated"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Updated"
-        android:layout_below="@id/created"
-        android:layout_marginTop="10dp"
-      />
-
-    <TextView
-        android:id="@+id/date2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="@string/date2"
-        android:textColor="#42a9fb"
-        android:layout_alignBaseline="@+id/updated"
-        android:layout_alignBottom="@+id/updated"
+
+        android:textColor="@color/colorBlue"
+        android:layout_alignBaseline="@+id/updated_name"
+        android:layout_alignBottom="@+id/updated_name"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"/>
 
 
     <TextView
-        android:id="@+id/publicr"
+        android:id="@+id/public_repos_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Public repos"
-        android:layout_below="@+id/updated"
+        android:layout_below="@+id/updated_name"
         android:layout_marginTop="10dp"/>
 
 
     <TextView
-        android:id="@+id/repo1"
+        android:id="@+id/public_repos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/nr1"
-        android:layout_below="@id/date2"
-        android:textColor="#42a9fb"
-        android:layout_alignBaseline="@id/publicr"
+        android:text="@string/number"
+        android:layout_below="@id/updated"
+        android:textColor="@color/colorBlue"
+        android:layout_alignBaseline="@id/public_repos_text"
         android:layout_alignParentRight="true"/>
 
     <TextView
-        android:id="@+id/privater"
+        android:id="@+id/private_repos_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/publicr"
+        android:layout_below="@id/public_repos_text"
         android:layout_marginTop="10dp"
 
         android:text="Private repos"/>
     <TextView
+        android:id="@+id/private_repos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/nr2"
-        android:layout_below="@id/repo1"
-        android:textColor="#42a9fb"
-        android:layout_alignBaseline="@id/privater"
+        android:layout_below="@id/public_repos"
+        android:textColor="@color/colorBlue"
+        android:layout_alignBaseline="@id/private_repos_text"
         android:layout_alignParentRight="true"/>
-    <Button
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="50dp"
+        android:orientation="horizontal"
+        android:layout_below="@id/private_repos_text"
+
+        android:layout_marginTop="70dp"
+        android:layout_marginLeft="3dp"
+        >
+    <Button
+        android:id="@+id/btn_blog"
+        android:layout_width="160dp"
+        android:layout_height="50dp"
         android:drawableRight="@mipmap/arrow_right"
-        android:drawablePadding="4dp"
-        android:layout_below="@id/privater"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
+        android:drawablePadding="3dp"
+        android:layout_alignParentLeft="true"
+        android:paddingLeft="8dp"
+        android:paddingRight="20dp"
+        android:background="@color/colorBlack"
+        android:textColor="@color/colorWhite"
         android:text="View blog"/>
+
+    <Button
+
+        android:id="@+id/btn_repositories"
+        android:layout_width="160dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="30dp"
+        android:drawableRight="@mipmap/arrow_right"
+        android:drawablePadding="3dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="3dp"
+        android:layout_alignParentRight="true"
+        android:text="View Repositories"
+        android:background="@color/colorBlack"
+        android:textColor="@color/colorWhite"/>
+    </LinearLayout>
+
 </RelativeLayout>
 
