--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorBlack">#2d2b2b</color>
+    <color name="colorBlue">#42a9fb</color>
+    <color name="colorWhite">#b2aeae</color>
 </resources>
